# llm-trace-inspector

./: .gitignore  CHANGELOG.md  LICENSE  README.md  action.yml  llm-trace-inspector.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: streamlit_app.py
docs/: release-notes-v0.3.0.md  release-notes-v0.3.1.md
examples/: agent_tool_error.json  bad_citations.json  irrelevant_chunks.json  missing_context.json  partially_grounded_answer.json  rag_trace_good.json  rag_trace_hallucinated.json
schema/: trace.schema.json
scripts/: generate_demo_gif.py
src/llm_trace_inspector/: __init__.py  api.py  citations.py  cli.py  config.py  evaluator.py  io.py  models.py  reports.py  text_utils.py
tests/: test_api.py  test_cli.py  test_evaluator.py  test_reports.py
