[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-trace-inspector"
version = "0.3.0"
description = "Debug RAG and agent outputs with groundedness, relevance, support coverage, and hallucination diagnostics."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "mahgoub soliman"}]
keywords = ["llm", "rag", "agents", "evaluation", "observability", "hallucination"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "fastapi>=0.111",
  "pydantic>=2.7",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
  "rich>=13.7",
  "httpx>=0.27",
  "jsonschema>=4.0",
  "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
llm-trace-inspector = "llm_trace_inspector.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_trace_inspector = ["schema/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
